--- a/bonsai-core/pom.xml
+++ b/bonsai-core/pom.xml
@@ -2,17 +2,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+    <parent>
+        <groupId>com.company</groupId>
+        <artifactId>bonsai</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>bonsai-project</groupId>
     <artifactId>bonsai-core</artifactId>
-    <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <properties>
-
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
 
         <slf4j.version>1.6.4</slf4j.version>
         <logback.version>1.0.1</logback.version>
@@ -20,6 +22,12 @@
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>com.company</groupId>
+            <artifactId>bonsai-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>org.slf4j</groupId>
