--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>bonsai-api</module>
         <module>bonsai-core</module>
         <module>bonsai-desktopUI</module>
+        <module>bonsai-plugin-libs</module>
         <module>bonsai-desktop</module>
     </modules>
 
